[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybelugaxl"
version = "0.1.5"
description = "A Python library to track the Airbus BelugaXL flights in real time using FlightRadar24"
keywords = ["belugaxl", "airbus", "beluga", "flightradar24", "realtimetracking"]
authors = [{name="TGA25dev"}]
readme = "README.md"
license-files = ["LICEN[CS]E*"]
license = "MIT"
dependencies = ["FlightRadarAPI"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TGA25dev/pybelugaxl"
Repository = "https://github.com/TGA25dev/pybelugaxl.git"
Issues = "https://github.com/TGA25dev/pybelugaxl/issues"